Implement ingestion reliability and real provider connector sync/webhooks

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,12 @@
 VITE_SUPABASE_URL=https://your-project-ref.supabase.co
 VITE_SUPABASE_PUBLISHABLE_KEY=your-anon-publishable-key
+
+# Edge function connector credentials (set in Supabase function secrets)
+STRIPE_SECRET_KEY=sk_live_xxx
+STRIPE_WEBHOOK_SECRET=whsec_xxx
+SQUARE_ACCESS_TOKEN=sq0atp_xxx
+SQUARE_WEBHOOK_SIGNATURE_KEY=sqwhsec_xxx
+AUTHORIZENET_API_LOGIN_ID=xxxxxxx
+AUTHORIZENET_TRANSACTION_KEY=xxxxxxx
+AUTHORIZENET_WEBHOOK_SIGNATURE_KEY=xxxxxxx
+AUTHORIZENET_API_URL=https://apitest.authorize.net/xml/v1/request.api
