--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,6 @@ jobs:
 
   integration:
     runs-on: ubuntu-latest
-    if: ${{ secrets.SUPABASE_URL != '' && secrets.SUPABASE_SERVICE_KEY != '' }}
 
     steps:
       - name: Checkout
@@ -52,7 +51,21 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Check integration secrets
+        id: check
+        env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
+        run: |
+          if [ -z "$SUPABASE_URL" ] || [ -z "$SUPABASE_SERVICE_KEY" ]; then
+            echo "run=false" >> "$GITHUB_OUTPUT"
+            echo "Integration secrets missing; skipping integration test run."
+          else
+            echo "run=true" >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Integration tests
+        if: steps.check.outputs.run == 'true'
         env:
           RUN_INTEGRATION_TESTS: 'true'
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
