Add PR template, branching docs, and project configuration

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,1 @@
-# Supabase core
-PROJECT_REF=
-SUPABASE_URL=
-SUPABASE_ACCESS_TOKEN=
-
-# Optional: service keys for edge functions (if needed later)
-SUPABASE_ANON_KEY=
-SUPABASE_SERVICE_KEY=
-
-# Provider: Stripe (sandbox or production)
-STRIPE_SECRET_KEY=sk_test_...
-STRIPE_WEBHOOK_SECRET=whsec_...
-
-# Provider: Square
-SQUARE_ACCESS_TOKEN=sq_test_...
-SQUARE_WEBHOOK_SIGNATURE_KEY=your-square-webhook-signature-key
-
-# Provider: Authorize.net
-AUTHORIZENET_API_LOGIN_ID=test_login
-AUTHORIZENET_TRANSACTION_KEY=test_key
-AUTHORIZENET_WEBHOOK_SIGNATURE_KEY=test_webhook_key
-AUTHORIZENET_API_URL=https://apitest.authorize.net/xml/v1/request.api
-
-# Optional: Phase A script behavior
-ENABLE_STRIPE=1
-ENABLE_SQUARE=0
-ENABLE_AUTHNET=0
+PROJECT_REF=your-project SUPABASE_ACCESS_TOKEN=your-token
