--- a/package.json
+++ b/package.json
@@ -1,12 +1,34 @@
 {
-  "name": "ai-business-insights",
+  "name": "183.1",
   "version": "1.0.0",
-  "description": "AI-powered transaction analytics for business growth",
+  "description": "One82 - AI-Powered Transaction Analytics Platform",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tapchipswipe/183.1.git"
+  },
   "scripts": {
-    "dev": "supabase functions serve",
-    "deploy": "supabase functions deploy",
-    "insights": "supabase functions deploy insights-generator",
-    "inventory": "supabase functions deploy inventory-predictor",
-    "seasonal": "supabase functions deploy seasonal-analyzer"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "type-check": "tsc --noEmit"
+  },
+  "dependencies": {
+    "next": "^14.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "openai": "^4.0.0",
+    "@anthropic-ai/sdk": "^0.20.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "typescript": "^5.3.0",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0"
   }
 }
