--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "@supabase/supabase-js": "^2.39.0",
     "openai": "^4.0.0",
-    "@anthropic-ai/sdk": "^0.20.0"
+    "@anthropic-ai/sdk": "^0.20.0",
+    "lucide-react": "^0.554.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
