chore: make Next.js baseline runnable

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,12 @@ pnpm-lock.yaml
 dist/
 build/
 coverage/
+.next/
 *.log
+*.tsbuildinfo
+
+# Supabase local temp
+supabase/.temp/
 
 # OS / editor
 .DS_Store
