--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-PROJECT_REF=your-project SUPABASE_ACCESS_TOKEN=your-token
+NEXT_PUBLIC_SUPABASE_URL=https://your-project-ref.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+
+# Supabase CLI (optional)
+PROJECT_REF=your-project-ref
+SUPABASE_ACCESS_TOKEN=your-token
