feat: email/password auth + onboarding + statement import (AI)

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 NEXT_PUBLIC_SUPABASE_URL=https://your-project-ref.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 
+# Server-only (Next.js Route Handlers)
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+OPENAI_API_KEY=your-openai-key
+OPENAI_VISION_MODEL=gpt-4o-mini
+
 # Supabase CLI (optional)
 PROJECT_REF=your-project-ref
 SUPABASE_ACCESS_TOKEN=your-token
